# ManilBot

./: README.md  config.py  environment.py  environment2.py  main.py
MCTS/: CMakeLists.txt  main.cpp
MCTS/include/: card.hpp  dealer.hpp  execution.h  manil.hpp  player.hpp  sosolver.h  util.hpp
MCTS/src/manil/: card.cpp  dealer.cpp  manil.cpp  player.cpp
agents/: CFR_agent.py  best_response.py  open_best_response.py  random_agent.py  util.py
agents/ddpg/: ddpg.py  ddpg_agent.py  maddpg.py  replaybuffer.py
agents/dqn/: dqn.py
agents/nfsp/: nfsp.py
agents/polgrads/: losses.py  network.py  policy_gradient.py
agents/ppo/: config.py  ppo.py  ppo2.py  ppo_agent.py
manil/: card.py  dealer.py  game.py  game2.py  play.py  player.py  rules.py  two_player_manil.py  util.py
util/: openspiel_policy.py
